--- a/code/Fig1_CortisolCharts.Rmd
+++ b/code/Fig1_CortisolCharts.Rmd
@@ -112,7 +112,7 @@ return(OD)
 ```{r read data, include=TRUE, warning=FALSE, message=FALSE}
 
 # Read in data file. OD is ELISA file. PB is presto blue file.
-OD <- read_csv(here("data", "KAB039_Cortisol_ELISAall2.csv"))
+OD <- read_csv(here("data", "ELISA", "KAB039_Cortisol_ELISAall2.csv"))
 colnames(OD) <- c("Sample","Well","OD_450","OD_540","OD_570","viability_1hr", "viability_2hr")
 OD <- OD %>% select(-viability_2hr)
 
@@ -161,8 +161,9 @@ OD5us$pPB <- as.numeric(OD5us$pPB)
 
 p_cort_per_stim <- ggline(OD5stim, x = "Ro_conc", y = "percent", ylab = "% Cortisol", add = "mean_sd", xlab = "[Ro] uM") + rremove("legend") + rotate_x_text(60) + geom_hline(yintercept = 100, linetype = "dotted", color = "black")
 
-p_cort_per_stim <- p_cort_per_stim + ylim(0,125)
+p_cort_per_stim <- p_cort_per_stim + ylim(0,120)
 p_cort_per_stim
+ggsave(plot = p_cort_per_stim, filename = "./plots/Fig1_cort_percent_sd.pdf", width = 3, height = 4)
 
 p_cort_perPB_stim <- ggline(OD5stim, x = "Ro_conc", y = "pPB", ylab = "% Viability", add = "mean_sd", xlab = "[Ro] uM") + rremove("legend") + rotate_x_text(60) + geom_hline(yintercept = 100, linetype = "dotted", color = "black")
 
@@ -204,10 +205,10 @@ p_all_PR_us
 
 
 ```{r IC50 values, warning=FALSE, message=FALSE}
-#Fit for pAldo
-fit <- drm(formula =   percent ~ Ro_conc , data = OD5stim, fct = LL.4())
+#Fit for percent Cortisol
+fit <- drm(formula =   percent ~ Ro_conc , data = OD5stim, fct=LL.4(names = c("Slope", "Lower Limit", "Upper Limit", "ED50")))
 summary(fit)
-
+plot(fit, type = "all")
 # This is a description of the variables and terms defined in the 'fit' model.
 # x = the independent variable (percent aldo?)
 # y = the dependent variable 
@@ -219,11 +220,18 @@ summary(fit)
 # b = Hill’s slope of the curve (i.e. this is related to the steepness of the curve at point c).
 # Generate points from  model. Pick range from logconc
 x <- seq(from = 0, to = 10, length=100)
+z <- 50
 # from OD ~ d + (a - d)/(1 + (logconc/cc)^b)
 y <- (fit$coefficients[2]+ (fit$coefficients[3]- fit$coefficients[2])/(1+(x/fit$coefficients[4])^ fit$coefficients[1])) 
+zz<- 
+(fit$coefficients[2]+ (fit$coefficients[3]- fit$coefficients[2])/(1+(z/fit$coefficients[4])^ fit$coefficients[1]))
+
+(fit$coefficients[3]+ (fit$coefficients[2]- fit$coefficients[3])/(1+(z/fit$coefficients[4])^ fit$coefficients[1]))
 
 plot(x = OD5stim$Ro_conc, y = OD5stim$percent, main="log standard curve") 
 lines(x,y, lty="dotted", col="red") 
+
+
 
 
 #Fit for pPB
@@ -244,8 +252,35 @@ x <- seq(from = 0, to = 10, length=100)
 # from OD ~ d + (a - d)/(1 + (logconc/cc)^b)
 y <- (fit$coefficients[2]+ (fit$coefficients[3]- fit$coefficients[2])/(1+(x/fit$coefficients[4])^ fit$coefficients[1])) 
 
+y <- (fit$coefficients[3]+ (fit$coefficients[2]- fit$coefficients[3])/(1+(z/fit$coefficients[4])^ fit$coefficients[1])) 
+
 plot(x = OD5stim$Ro_conc, y = OD5stim$pPB, main="log standard curve") 
 lines(x,y, lty="dotted", col="red") 
 ```
+
+
+```{r playing with modeling, message=FALSE, warning=FALSE, echo=FALSE}
+drm(percent_response~conc, data=toxdata, 
+                  fct=LL.4(fixed=c(NA, 0, 100, NA),
+                           names = c("Slope", "Lower Limit", "Upper Limit", "ED50")))
+
+fit <- drm(formula =   pPB ~ Ro_conc , data = OD5stim,  
+                  fct=LL.4(fixed=c(NA,0,100,NA),names = c("Slope", "Lower Limit", "Upper Limit","ED50")))
+
+summary(fit)
+plot(fit, type = "all")
+
+mselect(fit, fctList = list(W1.3(fixed=c(NA, 100, NA)),W1.4(), W2.3(fixed=c(NA, 100, NA)), W2.4(),  LL.4()),linreg=TRUE) 
+
+
+
+fit$coefficients[4]*(
+ (((fit$coefficients[3]-fit$coefficients[2])/(50-fit$coefficients[2]))-1)^(1/ fit$coefficients[1]))
+
+fit$coefficients[2]*(
+ (((100-0)/(50-0))-1)^(1/ fit$coefficients[1]))
+
+```
+
 
 
