--- a/code/Fig2_CellTiterRo_K562.Rmd
+++ b/code/Fig2_CellTiterRo_K562.Rmd
@@ -11,6 +11,7 @@ library(readxl)
 library(ggpubr)
 library(here)
 library(scales)
+library(stringr)
 ```
 
 
@@ -126,8 +127,11 @@ p_ctrl <- ggline(data = all_norm %>% filter(construct %in% c("H2O","GFP")), x = 
  add = "mean_se", palette = c("black","red"), numeric.x.axis = F) + 
   theme_minimal() + ylab("Fraction Viable Cells") + xlab("Ro Concentration (uM)")
 
-celltiterDox <- ggline(data = all_normDox %>% filter(dox.1 == "dox"), x = "conc", y = "value", color = "construct", add = "mean_se", palette = c("red", "black"), numeric.x.axis = F) + theme_minimal() + ylab("Normalized Viability") + xlab("Ro Concentration (uM)") +  theme(legend.position="bottom")
 
-# ggsave(plot = p_exp, filename = "plots/K562_viability_Ro_exp.png", width = 6, height = 3, bg = "white")
+all_normDox$value <- all_normDox$value*100
+
+celltiterDox <- ggline(data = all_normDox %>% filter(str_detect(variable, "R100A")), x = "conc", y = "value", color = "construct", add = "mean_se", palette = c("red", "black"), numeric.x.axis = F) + ylab("%Viability") + xlab("Ro Concentration (uM)") +  theme(legend.position="bottom")
+ggsave(plot = celltiterDox, filename = here("plots", "Fig2_K562_R100Aonly_percent_sd.pdf"), width = 3.5, height = 3, bg = "white")
+
 # ggsave(plot = p_ctrl, filename = "plots/K562_viability_Ro_ctrl.png", width = 6, height = 3, bg = "white")
 ```
